2005-03-14  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSMatrix.m:
	([removeRow:]) set column counts to zero if all rows are removed
	([removeColumn:]) set row counts to zero if all columns are removed
	([_renewRows:columns:rowSpace:colSpace:]) initialise all columns of
	any newly created rows (up to _maxCols) rather than just the number
	specified by the method argument.  Otherwise we get uninitialised
	columns in the matrix which will cause a crash when they are used.
	Fixes bug #12299

2005-03-13  Richard Frith-Macdonald <rfm@gnu.org>

	* Headers/AppKit/NSGraphics.h: Fix prototype for stricter compiler.
	* Source/Functions.m: ditto
	Deal with bug #12296

2005-03-10  Nicola Pero <n.pero@mi.flashnet.it>

	* Headers/AppKit/AppKitDefines.h (GS_EXPORT): Use extern, not
	__declspec(dllexport), on mingw
	
2005-03-10  Nicola Pero <n.pero@mi.flashnet.it>

	* configure.ac: Fixed setting variable when libjpeg can't be found.
	* configure: Regenereated.

2005-03-07  Fred Kiefer <FredKiefer@gmx.de>

	* Header/AppKit/NSCell.h: Moved NSControlSize definition to ...
	* Header/AppKit/NSColor.h: ... here and added
	NSMiniControlSize. For NSControlTint added NSBlueControlTint and
	NSGraphiteControlTint.
	* Header/AppKit/NSFont.h (+menuBarFontOfSize:,
	+systemFontSizeForControlSize:, -numberOfGlyphs,
	-coveredCharacterSet, -fontDescriptor): New MacOSX 10.3 methods.
	* Source/NSFont.m: Added dummy implementations for the new methods. 

2005-03-05 Adrian Robert <arobert@cogsci.ucsd.edu>

	* Source/NSApplication.m (-_windowDidResignKey:) Unhide mouse.

2005-03-05 Adrian Robert <arobert@cogsci.ucsd.edu>

	* Source/NSScroller.m (-checkSpaceForParts, -rectForPart:) Calculate
	buttonsWidth variable dynamically based on +scrollerWidth (supports
	width override by subclass).

2005-03-05 10:53 Gregory John Casamento <greg_casamento@yahoo.com>

	* Headers/AppKit/NSDataLink.h
	* Headers/AppKit/NSDataLinkManager.h: Added some ivars