@@ -1,3 +1,10 @@
+2005-03-14  Fred Kiefer <FredKiefer@gmx.de>
+
+	* Source/NSMatrix.m:
+	([_renewRows:columns:rowSpace:colSpace:]) Corrected last patch so
+	that the open panel works again. Initialize all new cells, not
+	just the requested ones.
+
 2005-03-14  Richard Frith-Macdonald <rfm@gnu.org>
 
 	* Source/NSMatrix.m:
